<resources>
    <string name="app_name">PictsManager</string>
    <string name="take_a_picture">Take a picture</string>
    <string name="name">Name</string>
    <string name="valider">Valid</string>
    <string name="annuler">Cancel</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="entrer">Enter</string>
    <string name="album_name">Album Name</string>
    <string name="add_album">Add Album</string>
    <string name="delete">Delete</string>
</resources>